[package]
name = "helsinki-bike-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
chrono = { version = "0.4.23", features = ["serde"] }
config = "0.13.3"
csv = "1.1.6"
futures-util = "0.3.25"
lazy_static = "1.4.0"
regex = "1.7.1"
reqwest = "0.11.14"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.24.2", features = ["full"] }
url = { version = "2.3.1", features = ["serde"] }
validator = { version = "0.16.0", features = ["derive"] }
