[package]
name = "helsinki-bike-app"
version = "0.1.0"
edition = "2021"
default-run = "helsinki-bike-app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
axum = "0.6.4"
chrono = { version = "0.4.23", features = ["serde"] }
config = "0.13.3"
csv = "1.1.6"
futures-util = "0.3.25"
itertools = "0.10.5"
lazy_static = "1.4.0"
regex = "1.7.1"
reqwest = "0.11.14"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "chrono", "offline"] }
tokio = { version = "1.24.2", features = ["full"] }
tower-http = { version = "0.3.5", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
url = { version = "2.3.1", features = ["serde"] }
uuid = { version = "1.3.0", features = ["v4"] }
validator = { version = "0.16.0", features = ["derive"] }

[[bin]]
name = "init-db"
test = false
bench = false
